--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
 	"dependencies": {
 		"express": "*",
 		"socket.io": "*",
-		"underscore": "*"
+		"underscore": "*",
+		"node-env-file": "*"
 	}
 }
