Added libs for twitter stream

--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
 		"express": "*",
 		"socket.io": "*",
 		"underscore": "*",
-		"node-env-file": "*"
+		"node-env-file": "*",
+		"node-tweet-stream": "*",
 	},
 	"scripts": {
 		"start": "node app.js"
